--- a/qr-service/.choreo/component.yaml
+++ b/qr-service/.choreo/component.yaml
@@ -9,4 +9,4 @@ endpoints:
     type: REST
     networkVisibilities: 
       - Public
-    schemaFilePath: openapi.yaml
+    schemaFilePath: ../openapi.yaml
